<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/happy"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/happy" />


        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/cat1"
                android:layout_margin="8dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/cat"/>


            <TextView
                android:id="@+id/text1"
                android:layout_toRightOf="@id/cat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/subtext1"
                android:layout_toRightOf="@id/cat1"
                android:layout_below="@id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subwhen"
                android:textColor="#999999"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/cat2"
                android:layout_margin="8dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/cat"/>


            <TextView
                android:id="@+id/text2"
                android:layout_toRightOf="@id/cat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/why"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/subtext2"
                android:layout_toRightOf="@id/cat2"
                android:layout_below="@id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subwhy"
                android:textColor="#999999"
                android:textSize="12sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/layout3"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/cat3"
                    android:layout_margin="8dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/cat"/>


                <TextView
                    android:id="@+id/text3"
                    android:layout_toRightOf="@id/cat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_margin="4dp"/>

                <TextView
                    android:id="@+id/subtext3"
                    android:layout_toRightOf="@id/cat3"
                    android:layout_below="@id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subwhat"
                    android:textColor="#999999"
                    android:textSize="12sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

            </RelativeLayout>

        <ImageView
            android:id="@+id/house"
            android:layout_alignParentRight="true"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src= "@drawable/house"/>



        <Button
            android:id="@+id/button"
            android:layout_toLeftOf="@id/house"
            android:layout_below="@id/layout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_margin="8dp"
            android:text="Do you dare to click me"
            android:shadowColor="#FFFFFF"
            android:onClick="myClick"
            />

    </RelativeLayout>



</LinearLayout>
</ScrollView>

</android.support.constraint.ConstraintLayout>